--- a/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
+++ b/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
@@ -48,11 +48,24 @@
 
 <div>
     <button @onclick="this.LoadAsync" disabled="@this.DisableLoad">Load</button>
+    <button @onclick="this.JoinCallAsync" disabled="@this.DisableLoad">Join call</button>
 </div>
 
-<CallComposite @ref="this.callComposite">
+<CallComposite @ref="this.callComposite"
+               OnCallEnded="this.OnCallEnded"
+               OnParticipantJoined="this.OnParticipantJoined"
+               OnParticipantLeft="this.OnParticipantLeft">
 
 </CallComposite>
+
+<div>
+    <p>
+        @foreach (var message in this.log)
+        {
+            @message<br/>
+        }
+    </p>
+</div>
 
 @code {
     private CallComposite? callComposite;
@@ -73,6 +86,8 @@
     private bool raiseHandButton;
     private bool screenShareButton;
 
+    private List<string> log;
+
     public Home()
     {
         this.userId = string.Empty;
@@ -88,6 +103,8 @@
         this.peopleButton = true;
         this.raiseHandButton = true;
         this.screenShareButton = true;
+
+        this.log = new List<string>();
     }
 
     public bool DisableLoad
@@ -141,5 +158,36 @@
             };
 
         await this.callComposite!.LoadAsync(args);
+    }
+
+    private async Task JoinCallAsync()
+    {
+        var options = new JoinCallOptions()
+        {
+            CameraOn = true,
+            MicrophoneOn = true,
+        };
+
+        await this.callComposite!.JoinCallAsync(options);
+    }
+
+    private void OnCallEnded()
+    {
+        this.Log("Call ended");
+    }
+
+    private void OnParticipantJoined(RemoteParticipantJoinedEvent @event)
+    {
+        this.Log($"{@event.Participant.DisplayName} has join the call. (ID: {@event.Participant.Identifier.CommunicationUserId})");
+    }
+
+    private void OnParticipantLeft(RemoteParticipantLeftEvent @event)
+    {
+        this.Log($"{@event.Participant.DisplayName} has left the call. (ID: {@event.Participant.Identifier.CommunicationUserId})");
+    }
+
+    private void Log(string message)
+    {
+        this.log.Add(message);
     }
 }
