--- a/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
+++ b/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
@@ -51,11 +51,13 @@
 <div>
     <button @onclick="this.LoadAsync" disabled="@this.DisableLoad">Load</button>
     <button @onclick="this.JoinCallAsync" disabled="@this.DisableLoad">Join call</button>
-</div>
 
-<div>
     <button @onclick="this.MuteAsync" disabled="@(this.callAdapter is null)">Mute</button>
     <button @onclick="this.UnmuteAsync" disabled="@(this.callAdapter is null)">Unmute</button>
+
+    <button @onclick="this.StartScreenShareAsync" disabled="@(this.callAdapter is null)">Start screen share</button>
+    <button @onclick="this.StopScreenShareAsync" disabled="@(this.callAdapter is null)">Stop screen share</button>
+
 </div>
 
 <CallComposite Adapter="this.callAdapter" />
@@ -70,160 +72,4 @@
     </p>
 </div>
 
-@code
-{
-    private CallAdapter? callAdapter;
 
-    private string userId;
-
-    private string groupIdLocator;
-
-    private string displayName;
-
-    private bool cameraButton;
-    private bool devicesButton;
-    private bool endCallButton;
-    private bool microphoneButton;
-    private bool moreButton;
-    private bool participantsButton;
-    private bool peopleButton;
-    private bool raiseHandButton;
-    private bool screenShareButton;
-
-    private List<string> log;
-
-    public Home()
-    {
-        this.userId = string.Empty;
-        this.groupIdLocator = "76FC6C87-2D4C-49C8-B909-7E3819A88621";
-        this.displayName = "John Doe";
-
-        this.cameraButton = true;
-        this.devicesButton = true;
-        this.endCallButton = true;
-        this.microphoneButton = true;
-        this.moreButton = true;
-        this.participantsButton = true;
-        this.peopleButton = true;
-        this.raiseHandButton = true;
-        this.screenShareButton = true;
-
-        this.log = new List<string>();
-    }
-
-    public async ValueTask DisposeAsync()
-    {
-        if (this.callAdapter is not null)
-        {
-            await this.callAdapter.DisposeAsync();
-
-            this.callAdapter = null;
-        }
-    }
-
-    public bool DisableLoad
-    {
-        get
-        {
-            if (string.IsNullOrWhiteSpace(this.userId))
-            {
-                return true;
-            }
-
-            if (string.IsNullOrWhiteSpace(this.groupIdLocator))
-            {
-                return true;
-            }
-
-            return false;
-        }
-    }
-
-    private async Task CreateUserAsync()
-    {
-        this.userId = await this.IdentityManager.CreateUserAsync();
-    }
-
-    private async Task LoadAsync()
-    {
-        var token = await this.IdentityManager.GetTokenAsync(this.userId);
-
-        var args = new CallAdapterArgs(
-            new UserIdentifier(this.userId),
-            new GroupCallLocator(this.groupIdLocator),
-            new TokenCredential(token))
-            {
-                DisplayName = this.displayName,
-                Options =
-                {
-                    CallControls =
-                    {
-                        CameraButton = this.cameraButton,
-                        DevicesButton = this.devicesButton,
-                        EndCallButton = this.endCallButton,
-                        MicrophoneButton = this.microphoneButton,
-                        MoreButton = this.moreButton,
-                        ParticipantsButton = this.participantsButton,
-                        PeopleButton = this.peopleButton,
-                        RaiseHandButton = this.raiseHandButton,
-                        ScreenShareButton = this.screenShareButton,
-                    }
-                }
-            };
-
-        this.callAdapter = await this.CallingService.CreateAdapterAsync(args);
-
-        this.callAdapter.OnCallEnded += this.OnCallEnded;
-        this.callAdapter.OnParticipantJoined += this.OnParticipantJoined;
-        this.callAdapter.OnParticipantLeft += this.OnParticipantLeft;
-    }
-
-    private async Task MuteAsync()
-    {
-        await this.callAdapter!.MuteAsync();
-    }
-
-    private async Task UnmuteAsync()
-    {
-        await this.callAdapter!.UnmuteAsync();
-    }
-
-    private async Task JoinCallAsync()
-    {
-        var options = new JoinCallOptions()
-        {
-            CameraOn = true,
-            MicrophoneOn = true,
-        };
-
-        await this.callAdapter!.JoinCallAsync(options);
-    }
-
-    private async Task OnCallEnded(CallAdapterCallEndedEvent @event)
-    {
-        this.Log($"Call ended (CallId: {@event.CallId})");
-
-        await Task.CompletedTask;
-    }
-
-    private async Task OnParticipantJoined(RemoteParticipantJoinedEvent @event)
-    {
-        this.Log($"{@event.Participant.DisplayName} has join the call. (ID: {@event.Participant.Identifier.CommunicationUserId})");
-
-        await Task.CompletedTask;
-    }
-
-    private async Task OnParticipantLeft(RemoteParticipantLeftEvent @event)
-    {
-        this.Log($"{@event.Participant.DisplayName} has left the call. (ID: {@event.Participant.Identifier.CommunicationUserId})");
-
-        await Task.CompletedTask;
-    }
-
-    private void Log(string message)
-    {
-        this.log.Add(message);
-
-        this.StateHasChanged();
-    }
-}
