Refactoring the CallAdapter to remove the options which are managed by the CallComposite control instead.

--- a/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
+++ b/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
@@ -63,7 +63,16 @@
 
 </div>
 
-<CallComposite Adapter="this.callAdapter" />
+<CallComposite Adapter="this.callAdapter"
+               CameraButton="@this.cameraButton"
+               DevicesButton="@this.devicesButton"
+               EndCallButton="@this.endCallButton"
+               MicrophoneButton="@this.microphoneButton"
+               MoreButton="@this.moreButton"
+               ParticipantsButton="@this.participantsButton"
+               PeopleButton="@this.peopleButton"
+               RaiseHandButton="@this.raiseHandButton"
+               ScreenShareButton="@this.screenShareButton" />
 
 <div>
     <p>Logs (Using events):</p>
