--- a/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
+++ b/tests/Communication.UI.Blazor.Demo/Pages/Home.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
 @inject IdentityManager IdentityManager
+@inject ICallingService CallingService
+@implements IAsyncDisposable
 
 <PageTitle>Calling</PageTitle>
 
@@ -48,17 +50,32 @@
 
 <div>
     <button @onclick="this.LoadAsync" disabled="@this.DisableLoad">Load</button>
-    <button @onclick="this.JoinCallAsync" disabled="@this.DisableLoad">Join call</button>
+    <button @onclick="this.JoinCallAsync" disabled="@(this.callAdapter is null)">Join call</button>
+    <button @onclick="this.LeaveCallAsync" disabled="@(this.callAdapter is null)">Leave call</button>
+    <input type="checkbox" id="leaveCallForEveryone" @bind="this.leaveCallForEveryone" />
+    <label for="leaveCallForEveryone">Leave call for everyone</label>
+
+    <button @onclick="this.MuteAsync" disabled="@(this.callAdapter is null)">Mute</button>
+    <button @onclick="this.UnmuteAsync" disabled="@(this.callAdapter is null)">Unmute</button>
+
+    <button @onclick="this.StartScreenShareAsync" disabled="@(this.callAdapter is null)">Start screen share</button>
+    <button @onclick="this.StopScreenShareAsync" disabled="@(this.callAdapter is null)">Stop screen share</button>
+
 </div>
 
-<CallComposite @ref="this.callComposite"
-               OnCallEnded="this.OnCallEnded"
-               OnParticipantJoined="this.OnParticipantJoined"
-               OnParticipantLeft="this.OnParticipantLeft">
-
-</CallComposite>
+<CallComposite Adapter="this.callAdapter"
+               CameraButton="@this.cameraButton"
+               DevicesButton="@this.devicesButton"
+               EndCallButton="@this.endCallButton"
+               MicrophoneButton="@this.microphoneButton"
+               MoreButton="@this.moreButton"
+               ParticipantsButton="@this.participantsButton"
+               PeopleButton="@this.peopleButton"
+               RaiseHandButton="@this.raiseHandButton"
+               ScreenShareButton="@this.screenShareButton" />
 
 <div>
+    <p>Logs (Using events):</p>
     <p>
         @foreach (var message in this.log)
         {
@@ -67,127 +84,4 @@
     </p>
 </div>
 
-@code {
-    private CallComposite? callComposite;
 
-    private string userId;
-
-    private string groupIdLocator;
-
-    private string displayName;
-
-    private bool cameraButton;
-    private bool devicesButton;
-    private bool endCallButton;
-    private bool microphoneButton;
-    private bool moreButton;
-    private bool participantsButton;
-    private bool peopleButton;
-    private bool raiseHandButton;
-    private bool screenShareButton;
-
-    private List<string> log;
-
-    public Home()
-    {
-        this.userId = string.Empty;
-        this.groupIdLocator = "76FC6C87-2D4C-49C8-B909-7E3819A88621";
-        this.displayName = "John Doe";
-
-        this.cameraButton = true;
-        this.devicesButton = true;
-        this.endCallButton = true;
-        this.microphoneButton = true;
-        this.moreButton = true;
-        this.participantsButton = true;
-        this.peopleButton = true;
-        this.raiseHandButton = true;
-        this.screenShareButton = true;
-
-        this.log = new List<string>();
-    }
-
-    public bool DisableLoad
-    {
-        get
-        {
-            if (string.IsNullOrWhiteSpace(this.userId))
-            {
-                return true;
-            }
-
-            if (string.IsNullOrWhiteSpace(this.groupIdLocator))
-            {
-                return true;
-            }
-
-            return false;
-        }
-    }
-
-    private async Task CreateUserAsync()
-    {
-        this.userId = await this.IdentityManager.CreateUserAsync();
-    }
-
-    private async Task LoadAsync()
-    {
-        var token = await this.IdentityManager.GetTokenAsync(this.userId);
-
-        var args = new CallAdapterArgs(
-            new UserIdentifier(this.userId),
-            new GroupCallLocator(this.groupIdLocator),
-            new TokenCredential(token))
-            {
-                DisplayName = this.displayName,
-                Options =
-                {
-                    CallControls =
-                    {
-                        CameraButton = this.cameraButton,
-                        DevicesButton = this.devicesButton,
-                        EndCallButton = this.endCallButton,
-                        MicrophoneButton = this.microphoneButton,
-                        MoreButton = this.moreButton,
-                        ParticipantsButton = this.participantsButton,
-                        PeopleButton = this.peopleButton,
-                        RaiseHandButton = this.raiseHandButton,
-                        ScreenShareButton = this.screenShareButton,
-                    }
-                }
-            };
-
-        await this.callComposite!.LoadAsync(args);
-    }
-
-    private async Task JoinCallAsync()
-    {
-        var options = new JoinCallOptions()
-        {
-            CameraOn = true,
-            MicrophoneOn = true,
-        };
-
-        await this.callComposite!.JoinCallAsync(options);
-    }
-
-    private void OnCallEnded()
-    {
-        this.Log("Call ended");
-    }
-
-    private void OnParticipantJoined(RemoteParticipantJoinedEvent @event)
-    {
-        this.Log($"{@event.Participant.DisplayName} has join the call. (ID: {@event.Participant.Identifier.CommunicationUserId})");
-    }
-
-    private void OnParticipantLeft(RemoteParticipantLeftEvent @event)
-    {
-        this.Log($"{@event.Participant.DisplayName} has left the call. (ID: {@event.Participant.Identifier.CommunicationUserId})");
-    }
-
-    private void Log(string message)
-    {
-        this.log.Add(message);
-    }
-}
